# SPDX-License-Identifier: Apache-2.0

# Check whether the build is for a tool (sub-project for now)
# Otherwise, continue with default onnx-mlir project
choose_build_target()

add_subdirectory(jni)
add_subdirectory(omp)
add_subdirectory(python)

# TODO: should add for each accelerator its subdirectory that implements InitAccel##name
# and ShutdownAccel##name.

# Handle Metal C compilation for z/OS
if(CMAKE_SYSTEM_NAME STREQUAL "OS390")
  # Metal C must be compiled with xlc -qmetal
  set(METAL_C_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/metal_csvquery.c)
  set(METAL_ASM_FILE ${CMAKE_CURRENT_BINARY_DIR}/metal_csvquery.s)
  set(METAL_OBJ_FILE ${CMAKE_CURRENT_BINARY_DIR}/metal_csvquery.o)
  
  # Step 1: Compile Metal C to assembly using xlc
  add_custom_command(
    OUTPUT ${METAL_ASM_FILE}
    COMMAND xlc -q64 -qmetal -S -o ${METAL_ASM_FILE} ${METAL_C_SOURCE}
    DEPENDS ${METAL_C_SOURCE}
    COMMENT "Compiling Metal C to assembly: ${METAL_C_SOURCE}"
    VERBATIM
  )
  
  # Step 2: Assemble to object file
  add_custom_command(
    OUTPUT ${METAL_OBJ_FILE}
    COMMAND as -m"NOOBJ,RENT,GOFF" -I/usr/include/metal/ -aegimrsx -o ${METAL_OBJ_FILE} ${METAL_ASM_FILE}
    DEPENDS ${METAL_ASM_FILE}
    COMMENT "Assembling Metal C: ${METAL_ASM_FILE}"
    VERBATIM
  )
  
  # Create a custom target for Metal C object
  add_custom_target(metal_csvquery_obj ALL DEPENDS ${METAL_OBJ_FILE})
  
  # Set the Metal object file to be linked
  set(METAL_C_OBJECT ${METAL_OBJ_FILE})
else()
  # On non-z/OS platforms, Metal C is not needed
  set(METAL_C_OBJECT "")
endif()

# Create static libcruntime.a to be embedded in model.so to make model.so self contained.
# However, by default object code for static library is not compiled with -fPIC. Embedding
# such static library in a shared library can cause runtime failure on some architectures,
# such as z. So we override the default and explicitly compile with -fPIC.
add_onnx_mlir_library(cruntime STATIC
  OMExternalConstant.c
  OMIndexLookup.c
  OMInstrument.c
  OMRandomNormal.c
  OMRandomUniform.c
  OMResize.c
  OMSort.c
  OMTopK.c
  OMTensor.c
  OMTensorList.c
  OMUnique.c
  OnnxDataType.c
  ${ONNX_MLIR_SRC_ROOT}/src/Support/SmallFPConversion.c

  DEPENDS
  AcceleratorsInc

  EXCLUDE_FROM_OM_LIBS

  INCLUDE_DIRS PRIVATE
  ${ONNX_MLIR_SRC_ROOT}/include
  )
set_target_properties(cruntime
  PROPERTIES
  LANGUAGE C
  POSITION_INDEPENDENT_CODE TRUE
  )

# Link Metal C object file on z/OS
if(CMAKE_SYSTEM_NAME STREQUAL "OS390")
  add_dependencies(cruntime metal_csvquery_obj)
  target_sources(cruntime PRIVATE ${METAL_C_OBJECT})
endif()

# The tensor utils are needed to support the execution sessions, which exists for the C++
# an Python interface. THey don't need any calls for code that is generated by the
# onnx-mlir compiler as these functions are in C and are already included in the
# `CRuntime` library. Only the functions that are needed to support the Execution Session
# functions are needed here, namely the creation/deletion of tensor/tensor lists plus
# some support functions.
# Note also that the printing of "profile-ir" related information, which is buffered in custom
# buffers during the model execution (when compiled with `-profile-ir` related options) are
# functions (like `run_main_graph`) that needs to be executed inside the dynamically loaded
# `model.so` and its statically linked `CRuntime`. This explains why there are no
# instrumentation related functions in the `OMTensorUtils` below.

add_onnx_mlir_library(OMTensorUtils
  OMTensor.cpp
  OMTensorList.cpp
  # ${ONNX_MLIR_SRC_ROOT}/src/Support/SmallFPConversion.c

  DEPENDS 
  AcceleratorsInc

  LINK_LIBS PUBLIC
  cruntime
  
  EXCLUDE_FROM_OM_LIBS

  INCLUDE_DIRS PUBLIC
  ${ONNX_MLIR_SRC_ROOT}/include
  )
set_target_properties(OMTensorUtils
  PROPERTIES
  POSITION_INDEPENDENT_CODE TRUE
  )

add_onnx_mlir_library(OMExecutionSession
  ExecutionSession.cpp

  EXCLUDE_FROM_OM_LIBS

  LINK_LIBS PUBLIC
  OMTensorUtils
  OMSmallFPConversion
  )
set_target_properties(OMExecutionSession
  PROPERTIES
  POSITION_INDEPENDENT_CODE TRUE
  )

# For linux, the dynamic library (dl) is used directly, while for Windows,
# LLVMSupport is used for locks when dynamic library is loaded. 
if(WIN32)
  target_link_libraries(OMExecutionSession PRIVATE 
    LLVMSupport
  )
else()
  target_link_libraries(OMExecutionSession PRIVATE dl)
endif()
